--- a/web/DoulosSIL-webfont-example.html
+++ b/web/DoulosSIL-webfont-example.html
@@ -1,14 +1,9 @@
 <html>
 <!--
-DoulosSIL-webfont-example.html
-Doulos SIL v 5.000
-14 Oct 2014
-This file is part of Doulos SIL font family (http://scripts.sil.org/DoulosSILfont)
-and is Copyright (c) 1997-2014 SIL International (http://www.sil.org/),
-with Reserved Font Names "Doulos" and "SIL". This Font Software is licensed
-under the SIL Open Font License, Version 1.1. You should have received a copy
-of the license along with this Font Software. If this is not the case, go to
-(http://scripts.sil.org/OFL) for all the details including a FAQ.
+This file is from the Doulos SIL project (https://software.sil.org/doulos/).
+Copyright (c) 1994-2021 SIL International (http://www.sil.org/) with Reserved
+Font Names "Doulos" and "SIL". This Font Software is licensed under the SIL
+Open Font License, Version 1.1 (http://scripts.sil.org/OFL).
 -->
 <head>
 	<link rel="stylesheet" href="DoulosSIL-webfont-example.css" type="text/css">
@@ -18,12 +13,9 @@ of the license along with this Font Software. If this is not the case, go to
 	
 <h1>Using Doulos SIL webfonts</h1>
 
-<p>The page demonstrates how to use the WOFF version of Doulos SIL for web pages, using local copies of the .woff files in this archive. For more information on this technique
-	 - and how to use the normal TrueType version as a web font - see <a href="http://scripts.sil.org/using_web_fonts">Using SIL Fonts on Web Pages</a>.</p>
+<p>The page demonstrates how to use the WOFF2 version of Doulos SIL for web pages, using a local copy of the .woff2 file in this archive. For more information on this technique - and how to use the normal TrueType version as a web font - see <a href="http://scripts.sil.org/using_web_fonts">Using SIL Fonts on Web Pages</a>.</p>
 
-<p>The body of this document is styled using an external stylesheet, with Doulos SIL set as the default font, and loaded directly as a WOFF file using the @font-face rule. 
-	If you're seeing a serif font here then it is working. Otherwise the text will be in a sans-serif or your browser default. 
-	This technique should work only in Firefox 3.6+, Chrome 6, the IE9 beta, and in development versions of Safari.</p>
+<p>The body of this document is styled using an external stylesheet, with Doulos SIL set as the default font, and loaded directly as a WOFF2 file using the @font-face rule. If you're seeing a serif font here then it is working. Otherwise the text will be in a sans-serif or your browser default. This technique is supported in all modern browsers.</p>
 	
 <p>To see specifically how these techniques are specified in the CSS and HTML view the source to this page and the accompanying CSS file.</p>
 	
