--- a/documentation/source/pdftemp/features.html
+++ b/documentation/source/pdftemp/features.html
@@ -885,6 +885,9 @@
     </tr>
     </tbody>
     </table>
+    <!-- PRODUCT SITE ONLY
+    [font id='doulos' face='CharisSIL-Regular' size='150%']
+    -->
     <footer class="footer">
         <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 6.000 and is copyright © 1994-2021 SIL International.</p>
     </footer>
