Updating docs and WOFF metadata for new version

--- a/documentation/features.html
+++ b/documentation/features.html
@@ -886,10 +886,10 @@
     </tbody>
     </table>
     <!-- PRODUCT SITE ONLY
-    [font id='doulos' face='CharisSIL-Regular' size='150%']
+    [font id='doulos' face='DoulosSIL-Regular' size='150%']
     -->
     <footer class="footer">
-        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 6.000 and is copyright © 1994-2021 SIL International.</p>
+        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 6.001 and is copyright © 1994-2021 SIL International.</p>
     </footer>
 </article>
 </div>
