--- a/documentation/source/pdftemp/features.html
+++ b/documentation/source/pdftemp/features.html
@@ -45,6 +45,7 @@
     </tbody>
     </table>
     <h4 id="small-caps-from-capitals">Small caps from capitals</h4>
+    <p><em>This feature is not supported in TypeTuner Web.</em></p>
     <p><span class="affects">Affects: all capitals</span></p>
     <table>
     <thead>
@@ -67,7 +68,8 @@
     </tr>
     </tbody>
     </table>
-    <h4 id="literacy-a-and-g">Literacy a and g</h4>
+    <h4 id="double-story-a-and-g">Double-story a and g</h4>
+    <p><em>This feature was formerly called 'Literacy alternates'.</em></p>
     <p><span class="affects">Affects: U+0061 U+00E0 U+00E1 U+00E2 U+00E3 U+00E4 U+00E5 U+0101 U+0103 U+0105 U+01CE U+01DF U+01E1 U+01FB U+0201 U+0203 U+0227 U+1E01 U+1E9A U+1EA1 U+1EA3 U+1EA5 U+1EA7 U+1EA9 U+1EAB U+1EAD U+1EAF U+1EB1 U+1EB3 U+1EB5 U+1EB7 U+2C65 U+2090 U+1D43 U+0363 U+0067 U+011D U+011F U+0121 U+0123 U+01E7 U+01F5 U+01E5 U+1E21 U+A7A1 U+1D4D</span></p>
     <table>
     <colgroup>
@@ -95,7 +97,7 @@
     </tr>
     </tbody>
     </table>
-    <h4 id="literacy-a-only">Literacy a (only)</h4>
+    <h4 id="single-story-a-only">Single-story a (only)</h4>
     <p><span class="affects">Affects: U+0061 U+00E0 U+00E1 U+00E2 U+00E3 U+00E4 U+00E5 U+0101 U+0103 U+0105 U+01CE U+01DF U+01E1 U+01FB U+0201 U+0203 U+0227 U+1E01 U+1E9A U+1EA1 U+1EA3 U+1EA5 U+1EA7 U+1EA9 U+1EAB U+1EAD U+1EAF U+1EB1 U+1EB3 U+1EB5 U+1EB7 U+2C65 U+2090 U+1D43 U+0363</span></p>
     <table>
     <colgroup>
@@ -123,7 +125,7 @@
     </tr>
     </tbody>
     </table>
-    <h4 id="literacy-g-only">Literacy g (only)</h4>
+    <h4 id="single-story-g-only">Single-story g (only)</h4>
     <p><span class="affects">Affects: U+0067 U+011D U+011F U+0121 U+0123 U+01E7 U+01F5 U+01E5 U+1E21 U+A7A1 U+1D4D</span></p>
     <table>
     <thead>
@@ -583,6 +585,7 @@
     </tbody>
     </table>
     <h4 id="kayan-diacritics">Kayan diacritics</h4>
+    <p><em>This feature is not supported in TypeTuner Web.</em></p>
     <p><span class="affects">Affects: U+0300 U+0301</span></p>
     <table>
     <thead>
@@ -792,7 +795,7 @@
     </tbody>
     </table>
     <h4 id="serbian-cyrillic-alternates">Serbian Cyrillic alternates</h4>
-    <p><em>Unlike other features this is activated by tagging the span of text as being in the Serbian language, not by turning on an OpenType feature.</em></p>
+    <p><em>Unlike other features this is activated by tagging the span of text as being in the Serbian language, not by turning on an OpenType feature. It is also not available through TypeTuner Web although a similar feature is supported (cv84).</em></p>
     <p><span class="affects">Affects: U+0431</span></p>
     <table>
     <thead>
@@ -812,6 +815,54 @@
     <td>Serbian</td>
     <td><span class="doulos-R normal" lang="sr">б</span></td>
     <td><code>lang='sr'</code></td>
+    </tr>
+    </tbody>
+    </table>
+    <h4 id="macedonian-cyrillic-alternates">Macedonian Cyrillic alternates</h4>
+    <p><em>Unlike other features this is activated by tagging the span of text as being in the Macedonian language, not by turning on an OpenType feature. It is also not available through TypeTuner Web although a similar feature is supported (cv84).</em></p>
+    <p><span class="affects">Affects: U+0431</span></p>
+    <table>
+    <thead>
+    <tr class="header">
+    <th>Feature</th>
+    <th>Sample</th>
+    <th>Feature setting</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="odd">
+    <td>Standard</td>
+    <td><span class="doulos-R normal">б</span></td>
+    <td></td>
+    </tr>
+    <tr class="even">
+    <td>Macedonian</td>
+    <td><span class="doulos-R normal" lang="mk">б</span></td>
+    <td><code>lang='mk'</code></td>
+    </tr>
+    </tbody>
+    </table>
+    <h4 id="serbian-and-macedonian-cyrillic-alternates">Serbian and Macedonian Cyrillic alternates</h4>
+    <p><em>This feature provides an alternate way to activate the Serbian and Macedonian forms in applications that do not support language-specific features.</em></p>
+    <p><span class="affects">Affects: U+0431</span></p>
+    <table>
+    <thead>
+    <tr class="header">
+    <th>Feature</th>
+    <th>Sample</th>
+    <th>Feature setting</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="odd">
+    <td>Standard</td>
+    <td><span class="doulos-R normal">б</span></td>
+    <td><code>cv84=0</code></td>
+    </tr>
+    <tr class="even">
+    <td>Serbian Macedonian forms</td>
+    <td><span class="doulos-R normal" style="font-feature-settings: &quot;cv84&quot; 1">б</span></td>
+    <td><code>cv84=1</code></td>
     </tr>
     </tbody>
     </table>
@@ -840,6 +891,7 @@
     </tbody>
     </table>
     <h4 id="tone-numbers">Tone numbers</h4>
+    <p><em>This feature is not supported in TypeTuner Web.</em></p>
     <p><span class="affects">Affects: U+02E5 U+02E6 U+02E7 U+02E8 U+02E9 U+A712 U+A713 U+A714 U+A715 U+A716</span></p>
     <table>
     <thead>
@@ -863,6 +915,7 @@
     </tbody>
     </table>
     <h4 id="hide-tone-contour-staves">Hide tone contour staves</h4>
+    <p><em>This feature is not supported in TypeTuner Web.</em></p>
     <p><span class="affects">Affects: U+02E5 U+02E6 U+02E7 U+02E8 U+02E9 U+A712 U+A713 U+A714 U+A715 U+A716</span></p>
     <table>
     <thead>
@@ -889,7 +942,7 @@
     [font id='doulos' face='DoulosSIL-Regular' size='150%']
     -->
     <footer class="footer">
-        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 6.001 and is copyright © 1994-2021 SIL International.</p>
+        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 6.101 and is copyright © 1994-2022 SIL International.</p>
     </footer>
 </article>
 </div>
