Update and rebuild docs [nobuild]

--- a/documentation/charset.html
+++ b/documentation/charset.html
@@ -245,7 +245,7 @@
     </table>
     <p>*This block is fully supported as of Unicode 15.0.</p>
     <h2 id="private-use-pua-characters">Private-use (PUA) characters</h2>
-    <p>There are a number of private-use characters that are supported in this font. These conform to <a href="http://scripts.sil.org/PUA_home">SIL International’s corporate registry</a> for usage of the Unicode private-use areas. Characters which are not yet in Unicode are shown below.</p>
+    <p>There are a number of private-use characters that are supported in this font. These conform to <a href="https://scripts.sil.org/PUA_home">SIL International’s corporate registry</a> for usage of the Unicode private-use areas. Characters which are not yet in Unicode are shown below.</p>
     <h3 id="specials">Specials</h3>
     <ul>
     <li>U+F130 FONT BASELINE AND SIDE-BEARING MARKER LEFT</li>
