--- a/documentation/faq.html
+++ b/documentation/faq.html
@@ -16,7 +16,7 @@
     </header>
     <p>Many questions can be answered by consulting the following FAQ pages. Here are a few sample questions answered in each FAQ:</p>
     <ul>
-    <li><a href="http://software.sil.org/fonts/faq">SIL fonts in general</a>
+    <li><a href="https://software.sil.org/fonts/faq">SIL fonts in general</a>
     <ul>
     <li><em>How can I type...?</em></li>
     <li><em>How can I use font features?</em></li>
@@ -24,7 +24,7 @@
     <li><em>Will you add support for script...?</em></li>
     <li><em>WIll you help me...?</em></li>
     </ul></li>
-    <li><a href="http://software.sil.org/lcgfonts/faq">SIL’s Latin, Cyrillic, and Greek fonts</a>.
+    <li><a href="https://software.sil.org/lcgfonts/faq">SIL’s Latin, Cyrillic, and Greek fonts</a>.
     <ul>
     <li><em>How can I type IPA symbols?</em></li>
     <li><em>How do I use both a single-story and double-story 'a' in italic?</em></li>
@@ -41,9 +41,9 @@
     </ul>
     <p>Here are a few of the most frequently asked questions specifically regarding Doulos SIL:</p>
     <h4 id="why-does-the-font-have-some-greek-characters-but-not-all"><em>Why does the font have some Greek characters, but not all?</em></h4>
-    <p>Although Doulos SIL includes some Greek characters, it is not intended to provide general support for the Greek language. The Greek characters that are included are there to support various notational systems (linguistic, logical, mathematical). Other fonts, such as <a href="http://software.sil.org/gentium">Gentium Plus</a> provide complete Greek script support.</p>
+    <p>Although Doulos SIL includes some Greek characters, it is not intended to provide general support for the Greek language. The Greek characters that are included are there to support various notational systems (linguistic, logical, mathematical). Other fonts, such as <a href="https://software.sil.org/gentium">Gentium Plus</a>, provide complete Greek script support.</p>
     <h4 id="will-you-add-full-greek-script-support"><em>Will you add full Greek script support?</em></h4>
-    <p>We have no plans to do that, however the <a href="https://scripts.sil.org/OFL_web">OFL licensing</a> allows anyone to add Greek support and freely distribute the font to others. It is even possible to <a href="developer.html">contribute that work back to the project</a> and share it with others.</p>
+    <p>We have no plans to do that. However the <a href="https://scripts.sil.org/OFL_web">OFL licensing</a> allows anyone to add Greek support and freely distribute the font to others. It is even possible to <a href="developer.html">contribute that work back to the project</a> and share it with others.</p>
     <h4 id="why-doesnt-doulos-sil-have-a-full-set-of-styles-will-you-add-them-in-the-future"><em>Why doesn’t Doulos SIL have a full set of styles? Will you add them in the future?</em></h4>
     <p>Our other fonts (Charis SIL, Gentium Plus, and Andika) are much better suited for most purposes and contain full sets of styles. Doulos SIL is provided for those who need a very basic font in the style of Times. We have no plans to add additional styles to Doulos SIL.</p>
     <footer class="footer">
