Update docs and metadata about sups subs for release [nobuild]

--- a/documentation/history.html
+++ b/documentation/history.html
@@ -22,7 +22,7 @@
     <ul>
     <li>Baseline clicks (cv69)</li>
     </ul></li>
-    <li>Standard 'subs' and 'sups' features for numerals
+    <li>Standard 'subs' and 'sups' features for numerals. These are not supported by <em>TypeTuner Web</em>.
     <ul>
     <li>Subscript numerals (subs)</li>
     <li>Superscript numerals (sups)</li>
