Fix typo in docs

--- a/documentation/history.html
+++ b/documentation/history.html
@@ -47,7 +47,7 @@
     <li>U+1DF29 LATIN SMALL LETTER S WITH MID-HEIGHT LEFT HOOK</li>
     <li>U+1DF2A LATIN SMALL LETTER T WITH MID-HEIGHT LEFT HOOK</li>
     </ul></li>
-    <li>Letters used for Egyptological transiteration
+    <li>Letters used for Egyptological transliteration
     <ul>
     <li>U+A7BA LATIN CAPITAL LETTER GLOTTAL A</li>
     <li>U+A7BB LATIN SMALL LETTER GLOTTAL A</li>
