--- a/web/DoulosSIL-webfont-example.html
+++ b/web/DoulosSIL-webfont-example.html
@@ -1,9 +1,9 @@
 <html>
 <!--
 This file is from the Doulos SIL project (https://software.sil.org/doulos/).
-Copyright (c) 1994-2023 SIL International (https://www.sil.org/) with Reserved
+Copyright (c) 1994-2024 SIL International (https://www.sil.org/) with Reserved
 Font Names "Doulos" and "SIL". This Font Software is licensed under the SIL
-Open Font License, Version 1.1 (https://scripts.sil.org/OFL).
+Open Font License, Version 1.1 (https://openfontlicense.org).
 -->
 <head>
 	<link rel="stylesheet" href="DoulosSIL-webfont-example.css" type="text/css">
