--- a/documentation/source/templatepdf.html
+++ b/documentation/source/templatepdf.html
@@ -16,7 +16,7 @@
     </header>
     $body$
     <footer class="footer">
-        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version $fontversion$ and is copyright © 1994-2024 SIL International.</p>
+        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version $fontversion$ and is copyright © 1994-2024 SIL Global.</p>
     </footer>
 </article>
 </div>
