Replace old URLs [nobuild]

--- a/web/DoulosSIL-webfont-example.html
+++ b/web/DoulosSIL-webfont-example.html
@@ -13,7 +13,7 @@ Open Font License, Version 1.1 (https://openfontlicense.org).
 	
 <h1>Using Doulos SIL webfonts</h1>
 
-<p>The page demonstrates how to use the WOFF2 version of Doulos SIL for web pages, using a local copy of the .woff2 file in this archive. For more information on this technique - and how to use the normal TrueType version as a web font - see <a href="https://scripts.sil.org/using_web_fonts">Using SIL Fonts on Web Pages</a>.</p>
+<p>The page demonstrates how to use the WOFF2 version of Doulos SIL for web pages, using a local copy of the .woff2 file in this archive. For more information on this technique - and how to use the normal TrueType version as a web font - see <a href="https://software.sil.org/fonts/webfonts">Using SIL Fonts on Web Pages</a>.</p>
 
 <p>The body of this document is styled using an external stylesheet, with Doulos SIL set as the default font, and loaded directly as a WOFF2 file using the @font-face rule. If you're seeing a serif font here then it is working. Otherwise the text will be in a sans-serif or your browser default. This technique is supported in all modern browsers.</p>
 	
