--- a/documentation/design.html
+++ b/documentation/design.html
@@ -14,9 +14,12 @@
     <header>
         <h1 class="title">Doulos SIL - Design</h1>
     </header>
-    <p>Doulos is very similar to Times/Times New Roman, but only has a single face - regular. It is intended for use alongside other Times-like fonts where a range of styles (italic, bold) is not needed.</p>
+    <p>Doulos is very similar to Times/Times New Roman, but only has a
+    single face - regular. It is intended for use alongside other
+    Times-like fonts where a range of styles (italic, bold) is not
+    needed.</p>
     <footer class="footer">
-        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 6.200 and is copyright © 1994-2023 SIL International.</p>
+        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 7 and is copyright © 1994-2024 SIL Global.</p>
     </footer>
 </article>
 </div>
