--- a/documentation/faq.html
+++ b/documentation/faq.html
@@ -14,9 +14,11 @@
     <header>
         <h1 class="title">Doulos SIL - Frequently Asked Questions</h1>
     </header>
-    <p>Many questions can be answered by consulting the following FAQ pages. Here are a few sample questions answered in each FAQ:</p>
+    <p>Many questions can be answered by consulting the following FAQ
+    pages. Here are a few sample questions answered in each FAQ:</p>
     <ul>
-    <li><a href="https://software.sil.org/fonts/faq">SIL fonts in general</a>
+    <li><a href="https://software.sil.org/fonts/faq">SIL fonts in
+    general</a>
     <ul>
     <li><em>How can I type...?</em></li>
     <li><em>How can I use font features?</em></li>
@@ -24,30 +26,54 @@
     <li><em>Will you add support for script...?</em></li>
     <li><em>WIll you help me...?</em></li>
     </ul></li>
-    <li><a href="https://software.sil.org/lcgfonts/faq">SIL’s Latin, Cyrillic, and Greek fonts</a>.
+    <li><a href="https://software.sil.org/lcgfonts/faq">SIL’s Latin,
+    Cyrillic, and Greek fonts</a>.
     <ul>
     <li><em>How can I type IPA symbols?</em></li>
-    <li><em>How do I use both a single-story and double-story 'a' in italic?</em></li>
+    <li><em>How do I use both a single-story and double-story 'a' in
+    italic?</em></li>
     <li><em>Why don’t my diacritics position properly?</em></li>
-    <li><em>Why is the line spacing so much looser that other fonts?</em></li>
+    <li><em>Why is the line spacing so much looser that other
+    fonts?</em></li>
     </ul></li>
-    <li><a href="https://scripts.sil.org/OFL-FAQ_web">The SIL Open Font License (OFL-FAQ)</a>
+    <li><a href="https://openfontlicense.org/ofl-faq">The SIL Open Font
+    License (OFL-FAQ)</a>
     <ul>
     <li><em>Can I use this font for...?</em></li>
     <li><em>Can I modify the font and then include it in...</em></li>
-    <li><em>If I use the font on a web page do I have to include an acknowledgement?</em></li>
+    <li><em>If I use the font on a web page do I have to include an
+    acknowledgement?</em></li>
     <li>The full OFL-FAQ.txt is also included in the font package.</li>
     </ul></li>
     </ul>
-    <p>Here are a few of the most frequently asked questions specifically regarding Doulos SIL:</p>
-    <h4 id="why-does-the-font-have-some-greek-characters-but-not-all"><em>Why does the font have some Greek characters, but not all?</em></h4>
-    <p>Although Doulos SIL includes some Greek characters, it is not intended to provide general support for the Greek language. The Greek characters that are included are there to support various notational systems (linguistic, logical, mathematical). Other fonts, such as <a href="https://software.sil.org/gentium">Gentium Plus</a>, provide complete Greek script support.</p>
-    <h4 id="will-you-add-full-greek-script-support"><em>Will you add full Greek script support?</em></h4>
-    <p>We have no plans to do that. However the <a href="https://scripts.sil.org/OFL_web">OFL licensing</a> allows anyone to add Greek support and freely distribute the font to others. It is even possible to <a href="developer.html">contribute that work back to the project</a> and share it with others.</p>
-    <h4 id="why-doesnt-doulos-sil-have-a-full-set-of-styles-will-you-add-them-in-the-future"><em>Why doesn’t Doulos SIL have a full set of styles? Will you add them in the future?</em></h4>
-    <p>Our other fonts (Charis SIL, Gentium Plus, and Andika) are much better suited for most purposes and contain full sets of styles. Doulos SIL is provided for those who need a very basic font in the style of Times. We have no plans to add additional styles to Doulos SIL.</p>
+    <p>Here are a few of the most frequently asked questions
+    specifically regarding Doulos SIL:</p>
+    <h4
+    id="why-does-the-font-have-some-greek-characters-but-not-all"><em>Why
+    does the font have some Greek characters, but not all?</em></h4>
+    <p>Although Doulos SIL includes some Greek characters, it is not
+    intended to provide general support for the Greek language. The
+    Greek characters that are included are there to support various
+    notational systems (linguistic, logical, mathematical). Other fonts,
+    such as <a href="https://software.sil.org/gentium">Gentium</a>,
+    provide complete Greek script support.</p>
+    <h4 id="will-you-add-full-greek-script-support"><em>Will you add
+    full Greek script support?</em></h4>
+    <p>We have no plans to do that. However the <a
+    href="https://openfontlicense.org_web">OFL licensing</a> allows
+    anyone to add Greek support and freely distribute the font to
+    others. It is even possible to <a href="developer.html">contribute
+    that work back to the project</a> and share it with others.</p>
+    <h4
+    id="why-doesnt-doulos-sil-have-a-full-set-of-styles-will-you-add-them-in-the-future"><em>Why
+    doesn’t Doulos SIL have a full set of styles? Will you add them in
+    the future?</em></h4>
+    <p>Our other fonts (Charis, Gentium, and Andika) are much better
+    suited for most purposes and contain full sets of styles. Doulos SIL
+    is provided for those who need a very basic font in the style of
+    Times. We have no plans to add additional styles to Doulos SIL.</p>
     <footer class="footer">
-        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 6.200 and is copyright © 1994-2023 SIL International.</p>
+        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 7 and is copyright © 1994-2024 SIL Global.</p>
     </footer>
 </article>
 </div>
