Update FAQ and features docs

--- a/documentation/faq.html
+++ b/documentation/faq.html
@@ -33,7 +33,7 @@
     <li><em>How do I use both a single-story and double-story 'a' in
     italic?</em></li>
     <li><em>Why don’t my diacritics position properly?</em></li>
-    <li><em>Why is the line spacing so much looser that other
+    <li><em>Why is the line spacing so much looser than other
     fonts?</em></li>
     </ul></li>
     <li><a href="https://openfontlicense.org/ofl-faq">The SIL Open Font
@@ -72,6 +72,13 @@
     suited for most purposes and contain full sets of styles. Doulos SIL
     is provided for those who need a very basic font in the style of
     Times. We have no plans to add additional styles to Doulos SIL.</p>
+    <h4
+    id="why-is-version-7-likely-to-be-the-last-major-version-of-doulos-sil"><em>Why
+    is version 7 likely to be the last major version of Doulos
+    SIL?</em></h4>
+    <p>There remain few, if any, uses for which Doulos SIL is a good
+    font choice, and we want to focus future efforts into our other
+    fonts.</p>
     <footer class="footer">
         <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 7 and is copyright © 1994-2024 SIL Global.</p>
     </footer>
