Update docs for cv44 and copyright year changes [RFS-934] [nobuild]

--- a/documentation/history.html
+++ b/documentation/history.html
@@ -38,6 +38,13 @@
     </ul>
     <h4 id="feature-enhancements">Feature enhancements</h4>
     <ul>
+    <li>The default form for capital N with left hook has been changed
+    to the lowercase style to match the capital Eng. The related feature
+    (<code>cv44</code>) has been changed to substitute the uppercase
+    style form.
+    <ul>
+    <li>U+019D LATIN CAPITAL LETTER N WITH LEFT HOOK</li>
+    </ul></li>
     <li>Additions to Modifier Apostrophe feature (<code>cv70</code>)
     <ul>
     <li>U+0312 COMBINING TURNED COMMA ABOVE</li>
@@ -178,7 +185,6 @@
     <li>U+02CE MODIFIER LETTER LOW GRAVE ACCENT</li>
     <li>U+02CF MODIFIER LETTER LOW ACUTE ACCENT</li>
     </ul></li>
-    <li>Autohinting is more consistent across the font family</li>
     </ul>
     <h3 id="feb-2023-sil-wstech-team-doulos-sil-version-6.200">1 Feb
     2023 (SIL WSTech Team) Doulos SIL version 6.200</h3>
@@ -929,7 +935,7 @@
     <li>First version released under the SIL Open Font License</li>
     </ul>
     <footer class="footer">
-        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 7 and is copyright © 1994-2024 SIL Global.</p>
+        <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 7 and is copyright © 1994-2025 SIL Global.</p>
     </footer>
 </article>
 </div>
