Add summary of versions [nobuild]

--- a/documentation/faq.html
+++ b/documentation/faq.html
@@ -79,6 +79,11 @@
     <p>There remain few, if any, uses for which Doulos SIL is a good
     font choice, and we want to focus future efforts into our other
     fonts.</p>
+    <h4
+    id="is-there-a-guide-to-the-many-versions-of-doulos-sil-and-its-variants"><em>Is
+    there a guide to the many versions of Doulos SIL and its
+    variants?</em></h4>
+    <p>Yes! See the <a href="versions.html">Versions</a> page.</p>
     <footer class="footer">
         <p>This guide is from the <a href="https://software.sil.org/doulos/" title="" class="active">Doulos SIL project</a> version 7 and is copyright © 1994-2025 SIL Global.</p>
     </footer>
