--- a/documentation/versions.html
+++ b/documentation/versions.html
@@ -36,7 +36,82 @@
     features and download a font with those features preset. This
     enables them to work in many applications that do not fully support
     OpenType.</p>
-    <h2 id="compact-versions"><em>Compact</em> versions</h2>
+    <h2 id="other-doulos-sil-versions-and-variants">Other Doulos SIL
+    versions and variants</h2>
+    <p>There are many font families based on the Doulos SIL design, as
+    summarized in this table. Current versions are in
+    <strong>bold</strong>. Additional information is provided in later
+    sections.</p>
+    <table>
+    <colgroup>
+    <col style="width: 27%" />
+    <col style="width: 20%" />
+    <col style="width: 52%" />
+    </colgroup>
+    <thead>
+    <tr class="header">
+    <th>Font Family</th>
+    <th>Versions</th>
+    <th>Status and use</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr class="odd">
+    <td><strong>Doulos SIL</strong></td>
+    <td><strong>7.000</strong></td>
+    <td><strong>Current</strong>—recommended for all uses and users</td>
+    </tr>
+    <tr class="even">
+    <td>Doulos SIL</td>
+    <td>4.000–6.200</td>
+    <td>No longer recommended—please use current version</td>
+    </tr>
+    <tr class="odd">
+    <td>Doulos SIL Compact</td>
+    <td>4.106–6.200</td>
+    <td>Fonts with reduced default line spacing—no longer
+    recommended</td>
+    </tr>
+    <tr class="even">
+    <td>Doulos SIL Literacy</td>
+    <td>4.014–6.200</td>
+    <td>Literacy variants with alternate a and g forms—no longer
+    recommended</td>
+    </tr>
+    <tr class="odd">
+    <td>Doulos SIL Literacy Comp</td>
+    <td>4.106–6.200</td>
+    <td>Compact literacy variants—no longer recommended</td>
+    </tr>
+    <tr class="even">
+    <td>Doulos SIL Literacy AmArea</td>
+    <td>5.000–6.200</td>
+    <td>Literacy variants with AmArea features—no longer
+    recommended</td>
+    </tr>
+    <tr class="odd">
+    <td>Doulos SIL <em>special variant</em></td>
+    <td>5.000–6.200</td>
+    <td>Modified versions for special purposes (AmArea, Mali, Tat)—no
+    longer recommended</td>
+    </tr>
+    <tr class="even">
+    <td>Doulos SIL <em>region subset</em></td>
+    <td>5.000</td>
+    <td>Subsets for particular regions (Afr, Am, APac, Cyr, CyrE, Eur,
+    Phon, Viet)—no longer recommended</td>
+    </tr>
+    </tbody>
+    </table>
+    <p>Versions prior to Doulos SIL v4.000 were named SIL Doulos and are
+    no longer available.</p>
+    <p>There are also font families named ‘Doulos <em>something</em>’
+    that were created using <a
+    href="https://scripts.sil.org/ttw/fonts2go.cgi">TypeTuner Web</a>.
+    We have no record or archive of most of these ‘tuned’ fonts, but if
+    you are desperate to find them contact us. We may be able to point
+    you to the distributors of those that we know about.</p>
+    <h3 id="compact-versions"><em>Compact</em> versions</h3>
     <p>Doulos SIL version 7 does not have a <em>Compact</em> variant.
     Most users should use the version 7 font and adjust line spacing
     explicitly within the application if necessary. If your application
@@ -47,8 +122,8 @@
     them supported in a compact version please <a
     href="https://software.sil.org/doulos/about/contact/">contact
     us</a>.</strong></p>
-    <h2 id="special-purpose-modified-variants">Special-purpose modified
-    variants</h2>
+    <h3 id="special-purpose-modified-variants">Special-purpose modified
+    variants</h3>
     <p><a href="https://software.sil.org/lcgfonts/download/">Modified
     versions of Doulos SIL version 6.200</a> are available that have
     been ‘tuned’ to turn on certain features by default. These are
@@ -59,7 +134,7 @@
     special-purpose modified fonts please <a
     href="https://software.sil.org/doulos/about/contact/">contact
     us</a>.</strong></p>
-    <h2 id="version-5-subsets">Version 5 subsets</h2>
+    <h3 id="version-5-subsets">Version 5 subsets</h3>
     <p>In the past, special <em>subset</em> versions of Doulos SIL
     version 5 were created for specific uses. Those fonts still work and
     <a href="https://software.sil.org/lcgfonts/font-subsets/">remain
@@ -76,10 +151,10 @@
     better choice. Font size is less of a concern than it was years ago,
     particularly with improved compression technologies such as
     woff2.</strong></p>
-    <h2 id="previous-versions">Previous versions</h2>
+    <h2 id="previous-versions-archive">Previous versions archive</h2>
     <p>Previous versions remain available from our <a
     href="https://software.sil.org/doulos/download/previous-versions">Previous
-    Versions archive</a>.</p>
+    versions archive</a>.</p>
     <h2 id="change-history">Change history</h2>
     <p>A detailed list of changes for each version of the fonts is on
     the <a href="history.html">Version history page</a>.</p>
