--- a/documentation/history.html
+++ b/documentation/history.html
@@ -47,6 +47,8 @@
     </ul></li>
     <li>Additions to Modifier Apostrophe feature (<code>cv70</code>)
     <ul>
+    <li>U+02BB MODIFIER LETTER TURNED COMMA</li>
+    <li>U+02BD MODIFIER LETTER REVERSED COMMA</li>
     <li>U+0312 COMBINING TURNED COMMA ABOVE</li>
     <li>U+0314 COMBINING REVERSED COMMA ABOVE</li>
     </ul></li>
