Update docs with guess at release date [nobuild]

--- a/documentation/faq.html
+++ b/documentation/faq.html
@@ -35,6 +35,8 @@
     <li><em>Why don’t my diacritics position properly?</em></li>
     <li><em>Why is the line spacing so much looser than other
     fonts?</em></li>
+    <li><em>I’ve updated my font to the latest version and some letters
+    have become black boxes with white letters - why?</em></li>
     </ul></li>
     <li><a href="https://openfontlicense.org/ofl-faq">The SIL Open Font
     License (OFL-FAQ)</a>
