--- a/documentation/history.html
+++ b/documentation/history.html
@@ -14,7 +14,7 @@
     <header>
         <h1 class="title">Doulos SIL - Version History</h1>
     </header>
-    <h3 id="n-jan-2025-sil-wstech-team-doulos-sil-version-7.000">N Jan
+    <h3 id="jun-2025-sil-wstech-team-doulos-sil-version-7.000">2 Jun
     2025 (SIL WSTech Team) Doulos SIL version 7.000</h3>
     <p><strong><em>Note that this may be the final major version of
     Doulos SIL. Please consider switching to one of our other font
